[gd_scene load_steps=18 format=2]

[ext_resource path="res://EventLog.gd" type="Script" id=1]
[ext_resource path="res://theme.tres" type="Theme" id=2]
[ext_resource path="res://Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://fonts/Exo_2/Exo2-VariableFont_wght.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://button_normal_blue.tres" type="StyleBox" id=5]
[ext_resource path="res://button_pressed_blue.tres" type="StyleBox" id=6]
[ext_resource path="res://images/1x/up.png" type="Texture" id=7]
[ext_resource path="res://button_hover_blue.tres" type="StyleBox" id=8]
[ext_resource path="res://images/1x/star.png" type="Texture" id=9]
[ext_resource path="res://Marquee.tscn" type="PackedScene" id=10]
[ext_resource path="res://images/perceptron-export.png" type="Texture" id=11]
[ext_resource path="res://clear_button_normal.tres" type="StyleBox" id=12]

[sub_resource type="DynamicFont" id=2]
size = 24
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=1]
size = 24
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
resource_name = "Expand"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_min_size:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 68, -0.25, 0, 0.1, 371.537, 500, -0.1, 39.3984, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:rect_size:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 68, -0.25, 0, 0.25, 0, 500, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=6]
resource_name = "Fade"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:self_modulate:a")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("VBoxContainer/Label:self_modulate:a")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.399977 )
}

[sub_resource type="Animation" id=5]
resource_name = "PopIn"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:rect_position:y")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( -100, -0.25, 0, 0.25, 0, 0, -0.3, 26.2653, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[node name="EventLog" type="Panel"]
margin_top = -60.0
margin_right = 338.0
margin_bottom = 8.0
rect_min_size = Vector2( 0, 68 )
focus_mode = 2
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="TickerBox" type="HBoxContainer" parent="."]
unique_name_in_owner = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = -33.0
margin_right = -4.0
margin_bottom = -4.0

[node name="EventIcon" type="TextureRect" parent="TickerBox"]
unique_name_in_owner = true
margin_right = 40.0
margin_bottom = 32.0
rect_min_size = Vector2( 40, 30 )
texture = ExtResource( 11 )
expand = true

[node name="Marquee" parent="TickerBox" instance=ExtResource( 10 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 44.0
margin_right = 330.0
margin_bottom = 32.0
text = ""

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 0, 68 )

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 338.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0.495, 0.5225, 0.55, 1 )
custom_fonts/font = SubResource( 2 )
text = "Event Log"
align = 1

[node name="Events" type="RichTextLabel" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_top = 33.0
margin_right = 338.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 35 )
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/default_color = Color( 0.909804, 0.921569, 1, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true

[node name="Buttons" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
margin_top = 33.0
margin_right = 338.0
margin_bottom = 98.0

[node name="Close" type="Button" parent="VBoxContainer/Buttons"]
self_modulate = Color( 0.495, 0.5225, 0.55, 1 )
margin_right = 167.0
margin_bottom = 65.0
rect_min_size = Vector2( 0, 60 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 6 )
custom_styles/normal = ExtResource( 5 )
icon = ExtResource( 7 )
flat = true
icon_align = 1
expand_icon = true

[node name="Clear" parent="VBoxContainer/Buttons" instance=ExtResource( 3 )]
unique_name_in_owner = true
self_modulate = Color( 0.495, 0.5225, 0.55, 1 )
margin_left = 171.0
margin_top = 0.0
margin_right = 338.0
margin_bottom = 65.0
focus_mode = 0
size_flags_horizontal = 8
size_flags_vertical = 8
custom_styles/hover = ExtResource( 12 )
custom_styles/pressed = ExtResource( 12 )
custom_styles/focus = ExtResource( 12 )
custom_styles/disabled = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
text = "Clear"

[node name="Anim" type="AnimationPlayer" parent="."]
anims/Expand = SubResource( 3 )
anims/Fade = SubResource( 6 )
anims/PopIn = SubResource( 5 )

[node name="notification" type="Sprite" parent="."]
unique_name_in_owner = true
self_modulate = Color( 1, 0.666667, 0, 1 )
texture = ExtResource( 9 )
offset = Vector2( 10, 10 )

[connection signal="focus_entered" from="." to="." method="_on_EventLog_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_EventLog_focus_exited"]
[connection signal="pressed" from="VBoxContainer/Buttons/Clear" to="." method="_on_Clear_pressed"]
